add slide for other AI methods example

--- a/main.tex
+++ b/main.tex
@@ -416,6 +416,16 @@ New unknown species in the training test appears in a region.
 
 \begin{frame}{Not only deep learning}
     
+\begin{columns}[t]
+    \column{.5\linewidth}
+    \centering
+    \includegraphics[width=.8\textwidth]{./figs/justeau1.png}%
+    \column{.5\linewidth}
+    \centering
+    \includegraphics[width=.8\textwidth]{./figs/justeau2.png}%
+\end{columns}
+    \nonumbernote{\cite{justeau2024refining}}
+
 \end{frame}
 
 \begin{frame}{Conclusion}
