--- a/refs.bib
+++ b/refs.bib
@@ -53,3 +53,13 @@
   year={2024}
 }
 
+@article{justeau2024refining,
+  title={Refining intra-patch connectivity measures in landscape fragmentation and connectivity indices},
+  author={Justeau-Allaire, Dimitri and Ibanez, Thomas and Vieilledent, Ghislain and Lorca, Xavier and Birnbaum, Philippe},
+  journal={Landscape Ecology},
+  volume={39},
+  number={2},
+  pages={24},
+  year={2024},
+  publisher={Springer}
+}
