--- a/refs.bib
+++ b/refs.bib
@@ -63,3 +63,15 @@
   year={2024},
   publisher={Springer}
 }
+
+@article{grieshop2012big,
+  title={Big brother is watching: studying insect predation in the age of digital surveillance},
+  author={Grieshop, Matthew J and Werling, Ben and Buehrer, Krista and Perrone, Julia and Isaacs, Rufus and Landis, Doug},
+  journal={American Entomologist},
+  volume={58},
+  number={3},
+  pages={172--182},
+  year={2012},
+  publisher={Oxford University Press Oxford, UK}
+}
+
