typo in compress command

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 %%% compiles with
 %% latexmk  -auxdir=aux/ main.tex
 %%% compress with
-%% gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.4 -dPDFSETTINGS=/prepress -dNOPAUSE -dQUIET -dBATCH -sOutputFile=compressed_PDF_file.pdf input_PDF_file.pdf
+%% gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.4 -dPDFSETTINGS=/prepress -dNOPAUSE -dQUIET -dBATCH -sOutputFile=main_compress.pdf main.pdf
 \documentclass{irdbeamer}
 \usepackage{tikz}
 \usepackage{marvosym}
