add transition with safonova et al., schemas for shift in target distribution

--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@
 \begin{frame}{Disclaimer}
     \vspace{-1cm}
     \centering
-    AI is not only deep learning
+    AI is not just deep learning
     \begin{figure}
             \includegraphics[width=0.4\textwidth]{./figs/goodfellow_AI.png}
         \caption{\tiny \cite{goodfellow2016deep}}
@@ -159,6 +159,19 @@
 \end{frame}
 
 \begin{frame}
+
+    \MVRightarrow{} smaller datasets than in most deep learning
+
+    \begin{figure}
+        \begin{center}
+    \includegraphics[width=.5\textwidth]{./figs/safonova.png}
+            \caption{\tiny \cite{safonova2023ten}}
+        \end{center}
+    \end{figure}
+    
+\end{frame}
+
+\begin{frame}
     \centering
     \large \textbf{Overfitting}
 \end{frame}
@@ -215,7 +228,7 @@
     \end{columns}
 \end{frame}
 
-\begin{frame}{Biases in the train set - autocorrelation}
+\begin{frame}{Biases in the train set : Autocorrelation}
     \begin{columns}
         \begin{column}{.5\linewidth}
             \centering
@@ -234,7 +247,7 @@
     \end{columns}
 \end{frame}
 
-\begin{frame}{Biases in the train set - Spatial autocorrelation}
+\begin{frame}{Biases in the train set : Spatial autocorrelation}
     \begin{columns}
         \begin{column}{.5\linewidth}
             \centering
@@ -343,6 +356,13 @@ New unknown species in the training test appears in a region.
     \item<3-> Handmade check on model confidence
 \end{itemize}
     
+\end{frame}
+
+\begin{frame}
+    \centering
+    \includegraphics<1>[width=.5\linewidth]{./figs/schemas/good_fit_test.png}%
+    \includegraphics<2>[width=.5\linewidth]{./figs/schemas/shift1.png}%
+    \includegraphics<3>[width=.5\linewidth]{./figs/schemas/shift2.png}%
 \end{frame}
 
 \begin{frame}{}
