--- a/refs.bib
+++ b/refs.bib
@@ -75,3 +75,13 @@
   publisher={Oxford University Press Oxford, UK}
 }
 
+@article{safonova2023ten,
+  title={Ten deep learning techniques to address small data problems with remote sensing},
+  author={Safonova, Anastasiia and Ghazaryan, Gohar and Stiller, Stefan and Main-Knorn, Magdalena and Nendel, Claas and Ryo, Masahiro},
+  journal={International Journal of Applied Earth Observation and Geoinformation},
+  volume={125},
+  pages={103569},
+  year={2023},
+  publisher={Elsevier}
+}
+
